client/src/features/Hotel/pages/Booking/components/StepThree/StepThree.scss
.step-three {
    &__box {
        padding: 15px;
        border: 1px solid #e7e7e7;
        font-size: 14px;
        margin-bottom: 1rem;

        .main-content {
            font-weight: bold;
        }
        .sub-title {
            font-size: 15px;
            font-weight: 500;
            margin-bottom: 5px;
        }

        .more-info {
            color: #008009;
            margin-bottom: 10px;
        }

        .more-info-green {
            color: #006607;
            padding: 5px;
            background: #d2edd5;
            display: inline-block;
            margin-bottom: 1rem;

            span {
                color: #923e01;
            }
        }

        .more-info-red {
            color: #923e01;
            display: flex;
            align-items: center;
            margin-bottom: 0.75rem;
        }

        .more-info-blur {
            color: #6b6b6b;
            margin-bottom: 1rem;
        }

        .label {
            display: block;
            span {
                font-size: 13px;
                color: #888;
            }
        }

        .view-info {
            border: 1px solid #e7e7e7;
            padding: 10px 20px;
        }

        .group-select {
            display: flex;
            justify-content: space-between;
            align-items: center;
        }
    }

    .green-bg {
        background-color: #ebf3ff;
    }

    button svg {
        vertical-align: top;
    }

    .confirm {
        font-size: 13.5px;

        margin-bottom: 2rem;
        a {
            text-decoration: underline;
        }
    }
}

